fix: add overflow-x hidden

--- a/dev/src/styles/foundation/_base.scss
+++ b/dev/src/styles/foundation/_base.scss
@@ -21,6 +21,7 @@ body {
   font-size: calc(10px + 2vmin);
   font-size: 1.8rem;
   position: relative;
+  overflow-x: hidden;
 }
 
 h1 {
